Finished edits based on Gordon's latest comments. Think I got everything except the dozen or so that were missing the first roung

--- a/latex/all_usepackages.tex
+++ b/latex/all_usepackages.tex
@@ -29,7 +29,7 @@
 %%%% USEPACKAGES for MACROS %%%%%
 \usepackage{algpseudocode}
 \usepackage[chapter]{algorithm}
-%\usepackage{caption}
+\usepackage{caption}
 \usepackage{subcaption}
 \usepackage{url}
 
